# Homegear

./: .cproject  .cprojectWindows  .gitignore  .gitmodules  .project  AESTest.cpp  AESTest.h  BidCoSMessage.cpp  BidCoSMessage.h  BidCoSMessages.cpp  BidCoSMessages.h  BidCoSPacket.cpp  BidCoSPacket.h  BidCoSPacketManager.cpp  BidCoSPacketManager.h  BidCoSQueue.cpp  BidCoSQueue.h  BidCoSQueueManager.cpp  BidCoSQueueManager.h  BinaryDecoder.cpp  BinaryDecoder.h  BinaryEncoder.cpp  BinaryEncoder.h  CHANGELOG  CMakeLists.txt  Cul.cpp  Cul.h  Database.cpp  Database.cpp.mysql  Database.h  Database.h.mysql  DeviceFamily.h  DeviceTypes.cpp  DeviceTypes.h  Dockerfile  Doxyfile  EventHandler.cpp  EventHandler.h  Exception.cpp  Exception.h  (+114 more)
Debug/: Cul.d  (+21 more)
homegear-miscellaneous/src/: DeviceTypes.h  Factory.cpp  Factory.h  GD.cpp  GD.h  Gd.cpp  Gd.h  Makefile  Makefile.am  Makefile.in  MiscCentral.cpp  MiscCentral.h  MiscDevice.cpp  MiscDevice.h  MiscPeer.cpp  MiscPeer.h  Miscellaneous.cpp  Miscellaneous.h
homegear-miscellaneous/src/.deps/: Factory.Plo  GD.Plo  MiscDevice.Plo  MiscPeer.Plo  Miscellaneous.Plo
homegear-miscellaneous/src/LogicalDevices/: MiscCentral.cpp  MiscCentral.h
libhomegear-base/: LICENSE  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
libhomegear-base/src/: BaseLib.h  Exception.h  IEvents.cpp  IEvents.h  IQueue.cpp  IQueue.h  Makefile  Makefile.am  Makefile.in  Variable.cpp  Variable.h
libhomegear-base/src/.deps/: BaseLib.Plo  IEvents.Plo  IQueue.Plo  Variable.Plo
libhomegear-base/src/.libs/: libhomegear-base.so.1
libhomegear-base/src/DeviceDescription/: BinaryPayload.cpp  BinaryPayload.h  DevicePacket.cpp  DevicePacket.h  Devices.cpp  Devices.h  Function.cpp  Function.h  HomegearDevice.cpp  HomegearDevice.h  HttpPayload.cpp  HttpPayload.h  JsonPayload.cpp  JsonPayload.h  Logical.cpp  Logical.h  Parameter.cpp  Parameter.h  ParameterCast.cpp  ParameterCast.h  ParameterGroup.cpp  ParameterGroup.h  Physical.cpp  Physical.h  RunProgram.cpp  RunProgram.h  Scenario.cpp  Scenario.h  SupportedDevice.cpp  SupportedDevice.h
libhomegear-base/src/Encoding/: BinaryEncoder.cpp  BinaryEncoder.h  HTTP.cpp  HTTP.h  Html.h  JsonDecoder.cpp  JsonDecoder.h  JsonEncoder.cpp  JsonEncoder.h  RPCDecoder.cpp  RPCDecoder.h  RPCEncoder.cpp  RPCEncoder.h  RPCHeader.cpp  RPCHeader.h  WebSocket.cpp  WebSocket.h  XMLRPCDecoder.cpp  XMLRPCDecoder.h  XMLRPCEncoder.cpp  XMLRPCEncoder.h
libhomegear-base/src/HelperFunctions/: Base64.cpp  Color.cpp  Color.h  Crypt.cpp  Crypt.h  HelperFunctions.cpp  HelperFunctions.h  Io.h  Math.cpp  Math.h  Net.cpp  Net.h
libhomegear-base/src/Managers/: FileDescriptorManager.cpp  (+2 more)
src/: DeathHandler.cpp  DeathHandler.h  IpcLogger.cpp  IpcLogger.h  LCK..ttyACM0  Makefile  Makefile.am  Makefile.in  Monitor.cpp  Monitor.h  main.cpp
src/.deps/: main.Po
src/CLI/: CLIClient.cpp  CLIClient.h  CLIServer.cpp  CLIServer.h  CliClient.cpp  CliClient.h  CliServer.cpp  CliServer.h
src/Database/: DatabaseController.cpp  DatabaseController.h  SQLite3.cpp  SQLite3.h  SystemVariableController.cpp  SystemVariableController.h
src/Events/: EventHandler.cpp  EventHandler.h
src/FamilyModules/: FamilyController.cpp  FamilyController.h  FamilyModuleInfo.h  FamilyServer.cpp  FamilyServer.h  SharedObjectFamilyModules.cpp  SharedObjectFamilyModules.h  SocketCentral.cpp  SocketCentral.h  SocketDeviceFamily.cpp  SocketDeviceFamily.h  SocketFamilyModules.cpp  SocketFamilyModules.h  SocketPeer.cpp  SocketPeer.h
src/Flows/: FlowInfoClient.h  FlowInfoServer.h  FlowsClient.cpp  FlowsClient.h  FlowsClientData.cpp  FlowsClientData.h  FlowsProcess.cpp  FlowsProcess.h  FlowsResponse.h  FlowsResponseClient.h  FlowsResponseServer.h  FlowsServer.cpp  FlowsServer.h  NodeInfoClient.h  NodeManager.cpp  NodeManager.h  PhpNode.cpp  PhpNode.h  SimplePhpNode.cpp  SimplePhpNode.h  StatefulPhpNode.cpp  StatefulPhpNode.h
src/GD/: GD.cpp  GD.h
src/IPC/: IpcClientData.cpp  IpcClientData.h  IpcResponse.h  IpcServer.cpp  IpcServer.h
src/Licensing/: LicensingController.cpp  LicensingController.h
src/MQTT/: MQTT.cpp  MQTT.h  MQTTSettings.cpp  MQTTSettings.h  Mqtt.cpp  Mqtt.h  MqttSettings.cpp  MqttSettings.h
src/Node-BLUE/: FlowInfoClient.h  FlowInfoServer.h  FlowParser.cpp  FlowParser.h  NodeBlueClient.cpp  NodeBlueClient.h  NodeBlueClientData.cpp  NodeBlueClientData.h  NodeBlueCredentials.cpp  NodeBlueCredentials.h  NodeBlueProcess.cpp  NodeBlueProcess.h  NodeBlueResponseClient.h  NodeBlueResponseServer.h  NodeBlueServer.cpp  NodeBlueServer.h  NodeManager.cpp  NodeManager.h  NodeRedNode.cpp  NodeRedNode.h  SimplePhpNode.cpp  SimplePhpNode.h  StatefulPhpNode.cpp  StatefulPhpNode.h
src/Nodejs/: Nodejs.cpp  Nodejs.h  main.cpp
src/RPC/: Auth.cpp  Auth.h  Client.cpp  Client.h  ClientSettings.cpp  ClientSettings.h  RPCMethod.cpp  RPCMethod.h  RPCMethods.cpp  RPCMethods.h  RPCServer.cpp  RPCServer.h  RemoteRpcServer.cpp  RemoteRpcServer.h  RestServer.cpp  RestServer.h  Roles.cpp  Roles.h  RpcClient.cpp  RpcClient.h  RpcServer.cpp  RpcServer.h  Server.cpp  Server.h  Webserver.cpp  Webserver.h
src/ScriptEngine/: CacheInfo.h  PHPVariableConverter.cpp  PHPVariableConverter.h  PhpEvents.cpp  PhpEvents.h  PhpVariableConverter.cpp  PhpVariableConverter.h  ScriptEngine.cpp  ScriptEngine.h  ScriptEngineClient.cpp  ScriptEngineClient.h  ScriptEngineClientData.cpp  ScriptEngineClientData.h  ScriptEngineProcess.cpp  ScriptEngineProcess.h  ScriptEngineResponse.h  ScriptEngineServer.cpp  ScriptEngineServer.h  php_config_fixes.h  php_device.cpp  php_device.h  php_homegear_globals.cpp  php_homegear_globals.h  php_node.cpp  php_node.h  php_sapi.cpp  php_sapi.h
src/Systems/: DatabaseController.cpp  DatabaseController.h  FamilyController.cpp  FamilyController.h  PhysicalInterfaces.cpp  PhysicalInterfaces.h  UiController.cpp  UiController.h
src/UI/: UiController.cpp  UiController.h
src/UPnP/: UPnP.cpp  UPnP.h
src/User/: User.cpp  User.h
src/VariableProfiles/: VariableProfileManager.cpp  VariableProfileManager.h
src/WebServer/: WebServer.cpp  WebServer.h
(+1593 files in other folders)
